test/spec_vectors/i32/fail/module_49.wat
(module (memory 0) (func $type-binary-1st-operand-empty-in-memory.grow (memory.grow (i32.add)) (drop)))